Add splash screen implementation and asset

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
     - assets/images/icons/
     - assets/images/illustrations/
     - assets/animations/
+    - assets/splash/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
